--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,25 @@
+.grid-container{
+    display: grid;
+    grid-template-rows: auto 1fr;
+
+    grid-template-areas: 
+    "header"
+    "main"
+    ;
+}
+
+.card{
+    width: 70%;
+}
+
+.header{
+    grid-area: header;
+}
+
+.main{
+    grid-area: main;
+}
+
 .main-dark {
     box-shadow: 0px 2px 1px hsl(210, 28%, 16%) inset;
 }
